tests/error/contract_requires_not_bool.vow
// TEST: stderr "ContractTypeMismatch"
module ContractRequiresNotBool

fn add(a: i64, b: i64) -> i64 vow {
    requires: a + b
} {
    a + b
}

fn main() -> () [io] {
    print_i64(add(1, 2));
}
